[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/blenderWnd/titleBtn.gd" type="Script" id=1]
[ext_resource path="res://addons/blenderWnd/titleBtn_pressed_styleboxtexture.tres" type="StyleBox" id=2]
[ext_resource path="res://addons/blenderWnd/titleBtn_normal_styleboxtexture.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/blenderWnd/empty.png" type="Texture" id=4]
[ext_resource path="res://addons/blenderWnd/closeIcon.png" type="Texture" id=5]
[ext_resource path="res://addons/blenderWnd/closeIcon_hover.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="titleBtn" type="Button"]
rect_min_size = Vector2( 18, 16 )
focus_mode = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iconBtn" type="OptionButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_filter = 2
custom_icons/arrow = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.52549, 0.52549, 0.52549, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_pressed = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
disabled = true
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeBtn" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -8.0
margin_bottom = 8.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="iconBtn" to="." method="_on_iconBtn_mouse_entered"]
[connection signal="mouse_exited" from="iconBtn" to="." method="_on_iconBtn_mouse_exited"]
[connection signal="mouse_entered" from="closeBtn" to="." method="_on_closeBtn_mouse_entered"]
[connection signal="mouse_exited" from="closeBtn" to="." method="_on_closeBtn_mouse_exited"]
[connection signal="pressed" from="closeBtn" to="." method="_on_closeBtn_pressed"]
